# 2D-Grid-Map

./: .gitignore  CMakeLists.txt  README.md  package.xml  pcd2octomap.cpp
cmake_modules/: octomap-config.cmake
data/: robot.bt  robot03_plo_slam_map.pcd  slam_map.pcd  slam_map_final.pcd
launch/: demo.launch  octomaptransform.launch
rviz/: OctomapShow.rviz
src/: CMakeLists.txt  handlePCL.cpp  handlePCL.h  pcd2octomap.cpp  publish_pointcloud.cpp
